Implement failsafe/junit5 test harness for ITs