@@ -50,22 +50,6 @@
     </dependencies>
     <build>
         <plugins>
-            <!-- TODO remove and use classpath -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <!-- <argLine>-Dchronicle.values.dumpCode=true ... -->
-                    <!--                    <argLine>&#45;&#45;illegal-access=permit &#45;&#45;add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine> -->
-                    <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
-
-                    <dependenciesToScan>
-                        <dependency>dev.ikm.build:component:test-jar:tests</dependency>
-                    </dependenciesToScan>
-
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
