@@ -44,17 +44,6 @@
     <build>
         <plugins>
             <plugin>
-                <!-- TODO remove and use classpath -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <!-- <argLine>-Dchronicle.values.dumpCode=true ... -->
-                    <!--                    <argLine>&#45;&#45;illegal-access=permit &#45;&#45;add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>-->
-                    <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
